missing year column

--- a/etl/labour force.ipynb
+++ b/etl/labour force.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +245,7 @@
        "4     ILO estimates  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -591,18 +591,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dps = data[['Country (code)', 'Sex (code)', 'Age group (code)', *conc]].copy()"
+    "dps = data[['Country (code)', 'Sex (code)', 'Age group (code)', 'Year', *conc]].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -618,6 +618,7 @@
        "      <th>Country (code)</th>\n",
        "      <th>Sex (code)</th>\n",
        "      <th>Age group (code)</th>\n",
+       "      <th>Year</th>\n",
        "      <th>Labour force ('000)</th>\n",
        "      <th>Population ('000)</th>\n",
        "      <th>Labour force participation rate (%)</th>\n",
@@ -629,6 +630,7 @@
        "      <td>AFG</td>\n",
        "      <td>MF</td>\n",
        "      <td>15+</td>\n",
+       "      <td>1990</td>\n",
        "      <td>3196.350586</td>\n",
        "      <td>6267.271973</td>\n",
        "      <td>51.000668</td>\n",
@@ -638,6 +640,7 @@
        "      <td>AFG</td>\n",
        "      <td>MF</td>\n",
        "      <td>15-24</td>\n",
+       "      <td>1990</td>\n",
        "      <td>1026.528320</td>\n",
        "      <td>2293.822021</td>\n",
        "      <td>44.751873</td>\n",
@@ -647,6 +650,7 @@
        "      <td>AFG</td>\n",
        "      <td>MF</td>\n",
        "      <td>15-64</td>\n",
+       "      <td>1990</td>\n",
        "      <td>3133.075439</td>\n",
        "      <td>6000.932129</td>\n",
        "      <td>52.209812</td>\n",
@@ -656,6 +660,7 @@
        "      <td>AFG</td>\n",
        "      <td>MF</td>\n",
        "      <td>25-54</td>\n",
+       "      <td>1990</td>\n",
        "      <td>1936.388672</td>\n",
        "      <td>3330.002930</td>\n",
        "      <td>58.149757</td>\n",
@@ -665,6 +670,7 @@
        "      <td>AFG</td>\n",
        "      <td>MF</td>\n",
        "      <td>25-34</td>\n",
+       "      <td>1990</td>\n",
        "      <td>910.755432</td>\n",
        "      <td>1549.147095</td>\n",
        "      <td>58.790768</td>\n",
@@ -674,12 +680,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Country (code) Sex (code) Age group (code)  Labour force ('000)  \\\n",
-       "0            AFG         MF              15+          3196.350586   \n",
-       "1            AFG         MF            15-24          1026.528320   \n",
-       "2            AFG         MF            15-64          3133.075439   \n",
-       "3            AFG         MF            25-54          1936.388672   \n",
-       "4            AFG         MF            25-34           910.755432   \n",
+       "  Country (code) Sex (code) Age group (code)  Year  Labour force ('000)  \\\n",
+       "0            AFG         MF              15+  1990          3196.350586   \n",
+       "1            AFG         MF            15-24  1990          1026.528320   \n",
+       "2            AFG         MF            15-64  1990          3133.075439   \n",
+       "3            AFG         MF            25-54  1990          1936.388672   \n",
+       "4            AFG         MF            25-34  1990           910.755432   \n",
        "\n",
        "   Population ('000)  Labour force participation rate (%)  \n",
        "0        6267.271973                            51.000668  \n",
@@ -689,7 +695,7 @@
        "4        1549.147095                            58.790768  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,18 +706,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dps.columns = ['country', 'sex', 'age_group', *[to_concept_id(x) for x in conc]]"
+    "dps.columns = ['country', 'sex', 'age_group', 'year', *[to_concept_id(x) for x in conc]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -725,18 +731,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dps = dps.set_index(['country', 'sex', 'age_group'])"
+    "dps = dps.set_index(['country', 'sex', 'age_group', 'year'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
